Add Lead Generator Empire to portfolio

--- a/index.html
+++ b/index.html
@@ -398,12 +398,28 @@
                     <h3>Luxury Travel Bot</h3>
                     <p>AI-powered travel planning assistant that creates personalized luxury itineraries with professional PDF exports.</p>
                     <ul class="app-features">
-                        <li>Custom travel itineraries</li>
+                        <li>Custom travel itineraries & Getaways</li>
                         <li>Dialogflow integration</li>
                         <li>PDF generation</li>
                         <li>Affiliate partnerships</li>
                     </ul>
-                    <a href="https://4dgaming.games" class="app-link" target="_blank">View Demo →</a>
+                    <a href="https://ecofriendlyluxurytravels.com" class="app-link" target="_blank">View Demo →</a>
+                </div>
+
+                <!-- Add this as the 4th app card in the apps-grid -->
+
+                <!-- Lead Generator Empire -->
+                <div class="app-card">
+                    <div class="app-icon">👑</div>
+                    <h3>Lead Generator Empire</h3>
+                    <p>Multi-platform lead generation tool with real-time scraping from 8 social media platforms in 12+ languages.</p>
+                    <ul class="app-features">
+                        <li>8-platform coverage</li>
+                        <li>Real-time lead scraping</li>
+                        <li>12+ language support</li>
+                        <li>ROI calculator & forecasting</li>
+                    </ul>
+                    <a href="https://leadgeneratorempire.com" class="app-link" target="_blank">View Tool →</a>
                 </div>
 
                 <!-- Add Your Other Apps Here -->
@@ -429,7 +445,7 @@
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="stat-number">2+</div>
+                    <div class="stat-number">3+</div>
                     <div class="stat-label">Production Apps</div>
                 </div>
                 <div class="stat-card">
