--- a/index.html
+++ b/index.html
@@ -542,21 +542,21 @@
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $200</p>
                 </div>
 
-                <div class="app-card" style="background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%);">
+                <div class="app-card" style="background: linear-gradient(135deg, #ffecd2 0%, #f5576c 100%);">
                     <div class="app-icon">📦</div>
                     <h3>App Store Publishing</h3>
                     <p>Expert app submission to Google Play and Amazon Appstore. Get your app live fast.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $100</p>
                 </div>
 
-                <div class="app-card" style="background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);">
+                <div class="app-card" style="background: linear-gradient(135deg, #715CBA 0%, #fed6e3 100%);">
                     <div class="app-icon">🎙️</div>
                     <h3>AI Transcription Service</h3>
                     <p>Professional audio and video transcription with summaries and action items.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $10</p>
                 </div>
 
-                <div class="app-card" style="background: linear-gradient(135deg, #ffafbd 0%, #ffc3a0 100%);">
+                <div class="app-card" style="background: linear-gradient(135deg, #ffafbd 0%, #fed6e3 100%);">
                     <div class="app-icon">📈</div>
                     <h3>Trading Bot Development</h3>
                     <p>Custom automated trading bots with real-time data and strategy execution.</p>
