--- a/index.html
+++ b/index.html
@@ -366,6 +366,28 @@
                 grid-template-columns: 1fr;
             }
         }
+
+        /* New Badge */
+        .new-badge {
+            display: inline-block;
+            background: #ff6b6b;
+            color: white;
+            padding: 0.3rem 0.8rem;
+            border-radius: 20px;
+            font-size: 0.8rem;
+            font-weight: bold;
+            margin-left: 0.5rem;
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.7;
+            }
+        }
     </style>
 </head>
 <body>
@@ -378,6 +400,7 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#apps">Apps</a></li>
+                <li><a href="#services">Services</a></li>
                 <li><a href="#technologies">Technologies</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -386,12 +409,12 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Professional Apps & SaaS Tools</h1>
-        <p>Building innovative solutions that solve real problems</p>
+        <h1>Building the Future with AI, Blockchain & Mobile Apps</h1>
+        <p>Full-stack developer specializing in AI chatbots, Flutter apps, Web3 solutions, and automation</p>
         <p style="font-size: 1rem; margin-top: 1rem; opacity: 0.9;">
             8+ Published Apps • 10+ Years Experience • Multi-Platform Developer
         </p>
-        <a href="#apps" class="cta-button">Explore My Work</a>
+        <a href="#services" class="cta-button">Hire Me Directly</a>
     </section>
 
     <!-- Apps Section -->
@@ -497,6 +520,20 @@
                     <a href="#contact" class="app-link">Request Info →</a>
                 </div>
 
+                <!-- NEW: NFT/Web3 Projects -->
+                <div class="app-card" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
+                    <div class="app-icon">🎨</div>
+                    <h3>NFT & Web3 Projects <span class="new-badge">NEW</span></h3>
+                    <p>Digital assets and metaverse projects including Sandbox voxel assets and NFT collections.</p>
+                    <ul class="app-features">
+                        <li>The Sandbox assets</li>
+                        <li>OpenSea NFT collections</li>
+                        <li>Smart contract development</li>
+                        <li>Metaverse integration</li>
+                    </ul>
+                    <a href="#contact" class="app-link">View Portfolio →</a>
+                </div>
+
             </div>
         </div>
     </section>
@@ -528,6 +565,15 @@
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $200</p>
                 </div>
 
+                <!-- NEW: Web3/Blockchain Services -->
+                <div class="app-card" style="background: linear-gradient(135deg, #ff6b6b 0%, #ff8e53 100%);">
+                    <div class="app-icon">⛓️</div>
+                    <h3>Web3 & Blockchain Development <span class="new-badge">NEW</span></h3>
+                    <p>Smart contracts, NFT minting, DApp development, and metaverse asset creation.</p>
+                    <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $300</p>
+                    <button class="hire-button" onclick="createCheckout('web3')">💳 Hire Now with Stripe</button>
+                </div>
+
                 <div class="app-card" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);">
                     <div class="app-icon">🔍</div>
                     <h3>Web Scraping & Lead Gen</h3>
@@ -540,6 +586,15 @@
                     <h3>PDF Generation</h3>
                     <p>Automated PDF creation with custom layouts, images, tables, and professional formatting.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $200</p>
+                </div>
+
+                <!-- NEW: NFT/Metaverse Services -->
+                <div class="app-card" style="background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);">
+                    <div class="app-icon">🎨</div>
+                    <h3>NFT & Metaverse Assets <span class="new-badge">NEW</span></h3>
+                    <p>Create NFT collections, Sandbox voxel assets, and metaverse-ready 3D models.</p>
+                    <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $250</p>
+                    <button class="hire-button" onclick="createCheckout('nft')">💳 Hire Now with Stripe</button>
                 </div>
 
                 <div class="app-card" style="background: linear-gradient(135deg, #ffecd2 0%, #f5576c 100%);">
@@ -572,15 +627,15 @@
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="stat-number">8+</div>  <!-- CHANGED FROM 5+ -->
+                    <div class="stat-number">10+</div>
                     <div class="stat-label">Published Apps</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">2</div>  <!-- ADD THIS -->
+                    <div class="stat-number">2</div>
                     <div class="stat-label">App Stores</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">10+</div>  <!-- ADD THIS -->
+                    <div class="stat-number">10+</div>
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat-card">
@@ -620,6 +675,31 @@
                     <div class="tech-icon">🔥</div>
                     <div class="tech-name">Firebase</div>
                 </div>
+                <!-- NEW: Web3 Technologies -->
+                <div class="tech-item" style="background: linear-gradient(135deg, #ff6b6b 0%, #ff8e53 100%);">
+                    <div class="tech-icon">⛓️</div>
+                    <div class="tech-name">Ethereum</div>
+                </div>
+                <div class="tech-item" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
+                    <div class="tech-icon">🎨</div>
+                    <div class="tech-name">NFTs</div>
+                </div>
+                <div class="tech-item" style="background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);">
+                    <div class="tech-icon">🌐</div>
+                    <div class="tech-name">Web3.js</div>
+                </div>
+                <div class="tech-item" style="background: linear-gradient(135deg, #ffecd2 0%, #f5576c 100%);">
+                    <div class="tech-icon">🧊</div>
+                    <div class="tech-name">Solidity</div>
+                </div>
+                <div class="tech-item" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);">
+                    <div class="tech-icon">🏝️</div>
+                    <div class="tech-name">The Sandbox</div>
+                </div>
+                <div class="tech-item" style="background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);">
+                    <div class="tech-icon">🖼️</div>
+                    <div class="tech-name">OpenSea</div>
+                </div>
             </div>
         </div>
     </section>
@@ -629,17 +709,16 @@
         <div class="container">
             <h2 class="section-title">Let's Work Together</h2>
             <p style="font-size: 1.2rem; margin-bottom: 2rem; color: #666;">
-                Need an AI chatbot, mobile app, game reskin, or automation tool?<br>
-                I'm available for freelance work and exciting collaborations.
+                Need an AI chatbot, mobile app, game reskin, Web3 solution, or automation tool?<br>
+                Hire me directly with Stripe or reach out through email.
             </p>
             <div class="contact-buttons">
                 <a href="mailto:info@4dgaming.games" class="contact-button">📧 Email Me</a>
+                <a href="#services" class="contact-button">💳 Pay with Stripe</a>
                 <a href="https://www.freelancer.com/u/sidneym31" class="contact-button" target="_blank">💼 Freelancer</a>
-                <a href="https://www.fiverr.com/YourUsername" class="contact-button" target="_blank">✨ Fiverr</a>
-                <a href="https://www.upwork.com/freelancers/YourUsername" class="contact-button" target="_blank">🎯 Upwork</a>
             </div>
             
-            <div style="margin-top: 3rem; padding: 2rem; background: #f8f9fa; border-radius: 15px;">
+            <div style="margin-top: 3rem; padding: 2rem; background: white; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
                 <h3 style="margin-bottom: 1rem; color: #333;">What I Can Help With:</h3>
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; text-align: left;">
                     <div>
@@ -655,8 +734,16 @@
                         <p style="font-size: 0.9rem; margin-top: 0.5rem; color: #666;">Game reskinning, Publishing, Monetization</p>
                     </div>
                     <div>
+                        <strong style="color: #ff6b6b;">⛓️ Web3 & Blockchain</strong>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem; color: #666;">Smart contracts, NFTs, DApps, Metaverse</p>
+                    </div>
+                    <div>
                         <strong style="color: #667eea;">🔍 Web Scraping</strong>
                         <p style="font-size: 0.9rem; margin-top: 0.5rem; color: #666;">Data extraction, Lead generation, Automation</p>
+                    </div>
+                    <div>
+                        <strong style="color: #f093fb;">🎨 NFT Creation</strong>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem; color: #666;">Collections, Sandbox assets, Metaverse integration</p>
                     </div>
                 </div>
             </div>
@@ -666,8 +753,85 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 4D Gaming. All rights reserved.</p>
-        <p style="margin-top: 0.5rem; opacity: 0.8;">Built with passion and cutting-edge technology</p>
+        <p style="margin-top: 0.5rem; opacity: 0.8;">Built with passion and cutting-edge technology | AI • Blockchain • Mobile</p>
     </footer>
 
+    <script>
+        // Initialize Stripe
+        const BACKEND_URL = 'https://ai-meeting-notes-production-81d7.up.railway.app';
+
+        // Fetch key from backend at runtime
+        async function initializeStripe() {
+            const response = await fetch(`${BACKEND_URL}/config`);
+            const config = await response.json();
+            stripe = Stripe(config.publishableKey); // From Railway! ✅
+        }
+
+        // Service pricing mapping
+        const servicePrices = {
+            'chatbot': { price: 15000, name: 'AI Chatbot Development' },
+            'mobile': { price: 50000, name: 'Mobile App Development' },
+            'game': { price: 20000, name: 'Game Development & Reskinning' },
+            'web3': { price: 30000, name: 'Web3 & Blockchain Development' },
+            'scraping': { price: 5000, name: 'Web Scraping & Lead Gen' },
+            'pdf': { price: 20000, name: 'PDF Generation' },
+            'nft': { price: 25000, name: 'NFT & Metaverse Assets' },
+            'publishing': { price: 10000, name: 'App Store Publishing' },
+            'transcription': { price: 1000, name: 'AI Transcription Service' },
+            'trading': { price: 50000, name: 'Trading Bot Development' }
+        };
+
+        async function createCheckout(serviceType) {
+            const service = servicePrices[serviceType];
+            
+            if (!service) {
+                alert('Invalid service selected');
+                return;
+            }
+
+            try {
+                // Call your backend to create a Checkout Session
+                const response = await fetch('https://lead-generation-app.railway.app/create-checkout-session', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        service: serviceType,
+                        price: service.price,
+                        name: service.name
+                    })
+                });
+
+                const session = await response.json();
+
+                // Redirect to Stripe Checkout
+                const result = await stripe.redirectToCheckout({
+                    sessionId: session.id
+                });
+
+                if (result.error) {
+                    alert(result.error.message);
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                alert('There was an error processing your request. Please contact me directly at info@4dgaming.games');
+            }
+        }
+
+        // Smooth scrolling for navigation links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+    </script>
 </body>
 </html>
