--- a/success.html
+++ b/success.html
@@ -150,7 +150,7 @@
             <p>Thank you for hiring 4D Gaming! Your payment has been processed successfully.</p>
             
             <div class="details" id="payment-details">
-                fetch(`https://ai-meeting-notes-production-81d7.up.railway.app/checkout-session?sessionId=${sessionId}`)
+                <!-- Payment details will be loaded here -->
             </div>
 
             <div class="contact-info">
@@ -171,13 +171,17 @@
     </div>
 
     <script>
+        // Backend URL - Your custom domain (same as index.html)
+        const BACKEND_URL = 'https://4dgaming.games';
+        // Alternative: 'https://ai-meeting-notes-production-81d7.up.railway.app'
+        
         // Get session ID from URL
         const urlParams = new URLSearchParams(window.location.search);
         const sessionId = urlParams.get('session_id');
 
         if (sessionId) {
             // Fetch session details from backend
-            fetch(`YOUR_BACKEND_URL/checkout-session?sessionId=${sessionId}`)
+            fetch(`${BACKEND_URL}/checkout-session?sessionId=${sessionId}`)
                 .then(response => response.json())
                 .then(session => {
                     // Hide loading, show success
