Added stripe purchase buttons

--- a/index.html
+++ b/index.html
@@ -572,9 +572,9 @@
     </section>
 
     <!-- Services Section -->
-    <section class="apps-section" style="background: #f8f9fa;">
+    <section class="apps-section" style="background: #f8f9fa;" id="services">
         <div class="container">
-            <h2 class="section-title">Services I Offer</h2>
+            <h2 class="section-title">Services I Offer <span style="font-size: 1rem; color: #667eea;">💳 Hire Me Directly with Stripe</span></h2>
             <div class="apps-grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));">
                 
                 <div class="app-card" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
@@ -582,6 +582,7 @@
                     <h3>AI Chatbot Development</h3>
                     <p>Custom Dialogflow chatbots with natural conversations, webhook integrations, and PDF exports.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $150</p>
+                    <button class="hire-button" onclick="createCheckout('chatbot')">💳 Hire Now with Stripe</button>
                 </div>
 
                 <div class="app-card" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);">
@@ -589,6 +590,7 @@
                     <h3>Mobile App Development</h3>
                     <p>Cross-platform Flutter apps for iOS and Android with beautiful UI and smooth performance.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $500</p>
+                    <button class="hire-button" onclick="createCheckout('mobile')">💳 Hire Now with Stripe</button>
                 </div>
 
                 <div class="app-card" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
@@ -596,6 +598,7 @@
                     <h3>Game Development & Reskinning</h3>
                     <p>Mobile game development, reskinning, and publishing to Google Play and Amazon Appstore.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $200</p>
+                    <button class="hire-button" onclick="createCheckout('game')">💳 Hire Now with Stripe</button>
                 </div>
 
                 <!-- NEW: Web3/Blockchain Services -->
@@ -612,6 +615,7 @@
                     <h3>Web Scraping & Lead Gen</h3>
                     <p>Professional data extraction and lead generation from any website or platform.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $50</p>
+                    <button class="hire-button" onclick="createCheckout('scraping')">💳 Hire Now with Stripe</button>
                 </div>
 
                 <div class="app-card" style="background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);">
@@ -619,6 +623,7 @@
                     <h3>PDF Generation</h3>
                     <p>Automated PDF creation with custom layouts, images, tables, and professional formatting.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $200</p>
+                    <button class="hire-button" onclick="createCheckout('pdf')">💳 Hire Now with Stripe</button>
                 </div>
 
                 <!-- NEW: NFT/Metaverse Services -->
@@ -635,6 +640,7 @@
                     <h3>App Store Publishing</h3>
                     <p>Expert app submission to Google Play and Amazon Appstore. Get your app live fast.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $100</p>
+                    <button class="hire-button" onclick="createCheckout('publishing')">💳 Hire Now with Stripe</button>
                 </div>
 
                 <div class="app-card" style="background: linear-gradient(135deg, #715CBA 0%, #fed6e3 100%);">
@@ -642,6 +648,7 @@
                     <h3>AI Transcription Service</h3>
                     <p>Professional audio and video transcription with summaries and action items.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $10</p>
+                    <button class="hire-button" onclick="createCheckout('transcription')">💳 Hire Now with Stripe</button>
                 </div>
 
                 <div class="app-card" style="background: linear-gradient(135deg, #ffafbd 0%, #fed6e3 100%);">
@@ -649,6 +656,7 @@
                     <h3>Trading Bot Development</h3>
                     <p>Custom automated trading bots with real-time data and strategy execution.</p>
                     <p style="margin-top: 1rem; font-weight: bold; font-size: 1.3rem;">Starting at $500</p>
+                    <button class="hire-button" onclick="createCheckout('trading')">💳 Hire Now with Stripe</button>
                 </div>
 
             </div>
