Updated services color

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
         /* Technologies Section */
         .tech-section {
-            background: #f8f9fa;
+            background: white;
             padding: 4rem 2rem;
         }
 
@@ -324,10 +324,11 @@
         }
 
         .tech-item {
+            text-align: center;
             padding: 2rem;
-            background: white;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             border-radius: 15px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            color: white;
             transition: transform 0.3s;
         }
 
