Fix backend URL to point to Railway

--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
         // Backend URL - Your custom domain!
         // Since your Railway service serves both backend API and frontend HTML,
         // you can use your custom domain (cleaner) or Railway URL (works too)
-        const BACKEND_URL = 'https://4dgaming.games';
+        const BACKEND_URL = 'https://ai-meeting-notes-production-81d7.up.railway.app';
         // Alternative: 'https://ai-meeting-notes-production-81d7.up.railway.app'
         
         // Initialize Stripe (will be set after fetching config)
