--- a/success.html
+++ b/success.html
@@ -172,7 +172,7 @@
 
     <script>
         // Backend URL - Your custom domain (same as index.html)
-        const BACKEND_URL = 'https://4dgaming.games';
+        const BACKEND_URL = 'https://ai-meeting-notes-production-81d7.up.railway.app';
         // Alternative: 'https://ai-meeting-notes-production-81d7.up.railway.app'
         
         // Get session ID from URL
