--- a/success.html
+++ b/success.html
@@ -164,7 +164,7 @@
 
             <div style="margin-top: 2rem; padding: 1rem; background: #fff3cd; border-radius: 10px;">
                 <p style="color: #856404; font-size: 0.9rem; margin: 0;">
-                    <strong>Questions?</strong> Contact me at <a href="mailto:info@4dgaming.games" style="color: #667eea;">info@4dgaming.games</a>
+                    <strong>Questions?</strong> Contact me at <a href="mailto:info@sidneym.com" style="color: #667eea;">info@sidneym.com</a>
                 </p>
             </div>
         </div>
@@ -172,7 +172,7 @@
 
     <script>
         // Backend URL - Your custom domain (same as index.html)
-        const BACKEND_URL = 'https://4dgaming.games';
+        const BACKEND_URL = 'https://ai-meeting-notes-production-81d7.up.railway.app';
         // Alternative: 'https://ai-meeting-notes-production-81d7.up.railway.app'
         
         // Get session ID from URL
