--- a/index.html
+++ b/index.html
@@ -92,6 +92,79 @@
             color: #667eea;
         }
 
+        /* Mobile Menu Button */
+        .mobile-menu-btn {
+            display: none;
+            flex-direction: column;
+            gap: 5px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding: 8px;
+            z-index: 1001;
+        }
+
+        .mobile-menu-btn span {
+            width: 25px;
+            height: 3px;
+            background: #333;
+            border-radius: 3px;
+            transition: all 0.3s ease;
+        }
+
+        .mobile-menu-btn.active span:nth-child(1) {
+            transform: rotate(45deg) translate(8px, 8px);
+        }
+
+        .mobile-menu-btn.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .mobile-menu-btn.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(7px, -7px);
+        }
+
+        /* Mobile Menu Overlay */
+        .mobile-menu {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.95);
+            z-index: 999;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s ease, visibility 0.3s ease;
+        }
+
+        .mobile-menu.active {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .mobile-menu-content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            gap: 2rem;
+        }
+
+        .mobile-menu a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.5rem;
+            font-weight: 600;
+            transition: color 0.3s;
+        }
+
+        .mobile-menu a:hover {
+            color: #667eea;
+        }
+
         /* Hero Section */
         .hero {
             max-width: 1200px;
@@ -603,7 +676,7 @@
                 </div>
 
                 <!-- NEW: Web3/Blockchain Services -->
-                <div class="app-card" style="background: linear-gradient(135deg, #ff6b6b 0%, #ff8e53 100%);">
+                <div class="app-card" style="background: linear-gradient(135deg, #ff6b6b 0%, #ee5a6f 100%);">
                     <div class="app-icon">⛓️</div>
                     <h3>Web3 & Blockchain Development <span class="new-badge">NEW</span></h3>
                     <p>Smart contracts, NFT minting, DApp development, and metaverse asset creation.</p>
@@ -628,7 +701,7 @@
                 </div>
 
                 <!-- NEW: NFT/Metaverse Services -->
-                <div class="app-card" style="background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);">
+                <div class="app-card" style="background: linear-gradient(135deg, #a8edea 0%, #764ba2 100%);">
                     <div class="app-icon">🎨</div>
                     <h3>NFT & Metaverse Assets <span class="new-badge">NEW</span></h3>
                     <p>Create NFT collections, Sandbox voxel assets, and metaverse-ready 3D models.</p>
@@ -636,7 +709,7 @@
                     <button class="hire-button" onclick="createCheckout('nft')">💳 Hire Now with Stripe</button>
                 </div>
 
-                <div class="app-card" style="background: linear-gradient(135deg, #ffecd2 0%, #f5576c 100%);">
+                <div class="app-card" style="background: linear-gradient(135deg, #f5576c 0%, #f5576c 100%);">
                     <div class="app-icon">📦</div>
                     <h3>App Store Publishing</h3>
                     <p>Expert app submission to Google Play and Amazon Appstore. Get your app live fast.</p>
@@ -644,7 +717,7 @@
                     <button class="hire-button" onclick="createCheckout('publishing')">💳 Hire Now with Stripe</button>
                 </div>
 
-                <div class="app-card" style="background: linear-gradient(135deg, #715CBA 0%, #fed6e3 100%);">
+                <div class="app-card" style="background: linear-gradient(135deg, #715CBA 0%, #764ba2 100%);">
                     <div class="app-icon">🎙️</div>
                     <h3>AI Transcription Service</h3>
                     <p>Professional audio and video transcription with summaries and action items.</p>
@@ -652,7 +725,7 @@
                     <button class="hire-button" onclick="createCheckout('transcription')">💳 Hire Now with Stripe</button>
                 </div>
 
-                <div class="app-card" style="background: linear-gradient(135deg, #ffafbd 0%, #fed6e3 100%);">
+                <div class="app-card" style="background: linear-gradient(135deg, #ffafbd 0%, #f5576c 100%);">
                     <div class="app-icon">📈</div>
                     <h3>Trading Bot Development</h3>
                     <p>Custom automated trading bots with real-time data and strategy execution.</p>
